<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="presenter"
            type="com.bottlerocketstudios.continuitysample.legislator.presenter.LegislatorSearchInputPresenter"/>
        <variable
            name="searchInput"
            type="com.bottlerocketstudios.continuitysample.legislator.viewmodel.LegislatorSearchInputViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:error="@{searchInput.getNameValidationFailureText(context, searchInput.nameValid)}">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/lsif_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lsif_name_hint"
                android:text="@={searchInput.legislatorName}"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lsif_search_name"
            android:onClick="@{() -> presenter.onNameSearchTap(searchInput)}"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:error="@{searchInput.getZipValidationFailureText(context, searchInput.zipValid)}">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/lsif_zip_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lsif_zip_hint"
                android:text="@={searchInput.zipCode}"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lsif_search_zip"
            android:onClick="@{() -> presenter.onZipSearchTap(searchInput)}"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lsif_search_location"
            android:onClick="@{() -> presenter.onSearchLocationTap()}"/>
    </LinearLayout>
</layout>